--- a/dictate.yaml
+++ b/dictate.yaml
@@ -16,16 +16,25 @@ calibrate:
 layouts:
   us:
     keys:
-      - '`!@#$%^&*()_+'
+      - '`1234567890-='
       - qwertyuiop[]
       - asdfghjkl;'"\
       - zxcvbnm,./?
     languages:
       stt: en-US
       tts: en
+  de:
+    keys:
+      - '^1234567890ß´'
+      - qwertzuiopü+
+      - asdfghjklöä
+      - yxcvbnm,.-
+    languages:
+      stt: de-DE
+      tts: de
   ru:
     keys:
-      - 'ё!"№;%:?*()_+'
+      - 'ё1234567890-='
       - йцукенгшщзхъ
       - фывапролджэЭ
       - ячсмитьбю.,
@@ -34,7 +43,7 @@ layouts:
       tts: ru
   il:
     keys:
-      - '`!@#$%^&*)(_+'
+      - ';1234567890-='
       - /'קראטוןםפ][
       - שדגכעיחלךף,"
       - זסבהנמצתץ.
