--- a/dictate.yaml
+++ b/dictate.yaml
@@ -17,9 +17,10 @@ layouts:
   us:
     keys:
       - '`1234567890-='
-      - qwertyuiop[]{}
-      - asdfghjkl;'"\:
-      - zxcvbnm,./?>~
+      - 'qwertyuiop[]{}'
+      - |
+        asdfghjkl;'"\:
+      - 'zxcvbnm,./?>~'
     languages:
       stt: en-US
       tts: en
