--- a/keyboard.yaml
+++ b/keyboard.yaml
@@ -1,113 +1,41 @@
 layouts:
   # English variants
-  us:
-    languages:
-      stt: en-US
-      tts: en
-  gb:
-    languages:
-      stt: en-GB
-      tts: en
-  uk:
-    languages:
-      stt: en-GB
-      tts: en
-  au:
-    languages:
-      stt: en-AU
-      tts: en
-  ca:
-    languages:
-      stt: en-CA
-      tts: en
-  ie:
-    languages:
-      stt: en-IE
-      tts: en
-  nz:
-    languages:
-      stt: en-NZ
-      tts: en
-  za:
-    languages:
-      stt: en-ZA
-      tts: en
+  us: {languages: {stt: en-US, tts: en}}
+  gb: {languages: {stt: en-GB, tts: en}}
+  uk: {languages: {stt: en-GB, tts: en}}
+  au: {languages: {stt: en-AU, tts: en}}
+  ca: {languages: {stt: en-CA, tts: en}}
+  ie: {languages: {stt: en-IE, tts: en}}
+  nz: {languages: {stt: en-NZ, tts: en}}
+  za: {languages: {stt: en-ZA, tts: en}}
   # Portuguese variants
-  pt:
-    languages:
-      stt: pt-PT
-      tts: pt
-  br:
-    languages:
-      stt: pt-BR
-      tts: pt
+  pt: {languages: {stt: pt-PT, tts: pt}}
+  br: {languages: {stt: pt-BR, tts: pt}}
   # European languages
-  gr:
-    languages:
-      stt: el-GR
-      tts: el
-  cz:
-    languages:
-      stt: cs-CZ
-      tts: cs
-  dk:
-    languages:
-      stt: da-DK
-      tts: da
-  se:
-    languages:
-      stt: sv-SE
-      tts: sv
-  no:
-    languages:
-      stt: nb-NO
-      tts: no
-  ua:
-    languages:
-      stt: uk-UA
-      tts: uk
-  by:
-    languages:
-      stt: be-BY
-      tts: be
+  de: {languages: {stt: de-DE, tts: de}}
+  fr: {languages: {stt: fr-FR, tts: fr}}
+  es: {languages: {stt: es-ES, tts: es}}
+  it: {languages: {stt: it-IT, tts: it}}
+  ru: {languages: {stt: ru-RU, tts: ru}}
+  tr: {languages: {stt: tr-TR, tts: tr}}
+  gr: {languages: {stt: el-GR, tts: el}}
+  cz: {languages: {stt: cs-CZ, tts: cs}}
+  dk: {languages: {stt: da-DK, tts: da}}
+  se: {languages: {stt: sv-SE, tts: sv}}
+  no: {languages: {stt: nb-NO, tts: no}}
+  ua: {languages: {stt: uk-UA, tts: uk}}
+  by: {languages: {stt: be-BY, tts: be}}
   # Far East languages
-  cn:
-    languages:
-      stt: zh-CN
-      tts: zh
-  tw:
-    languages:
-      stt: zh-TW
-      tts: zh-TW
-  jp:
-    languages:
-      stt: ja-JP
-      tts: ja
-  kr:
-    languages:
-      stt: ko-KR
-      tts: ko
+  cn: {languages: {stt: zh-CN, tts: zh}}
+  tw: {languages: {stt: zh-TW, tts: zh-TW}}
+  jp: {languages: {stt: ja-JP, tts: ja}}
+  kr: {languages: {stt: ko-KR, tts: ko}}
   # Semitic
-  eg:
-    languages:
-      stt: ar-EG
-      tts: ar
-  sa:
-    languages:
-      stt: ar-SA
-      tts: ar
-  ae:
-    languages:
-      stt: ar-AE
-      tts: ar
-  ma:
-    languages:
-      stt: ar-MA
-      tts: ar
-  il:
-    languages:
-      stt: he-IL
-      tts: iw
+  eg: {languages: {stt: ar-EG, tts: ar}}
+  sa: {languages: {stt: ar-SA, tts: ar}}
+  ae: {languages: {stt: ar-AE, tts: ar}}
+  ma: {languages: {stt: ar-MA, tts: ar}}
+  il: {languages: {stt: he-IL, tts: iw}}
 
 # XKB keycode to physical position mappings (row, col)
 keycode_positions:
