--- a/keyboard.yaml
+++ b/keyboard.yaml
@@ -160,8 +160,20 @@ keysym_mappings:
   onehalf: '½'
   threequarters: '¾'
   questiondown: '¿'
-  # Latin letters with diacritics
+  # Italian letters
+  agrave: 'à'
+  egrave: 'è'
+  eacute: 'é'
+  igrave: 'ì'
+  ograve: 'ò'
+  ugrave: 'ù'
   Agrave: 'À'
+  Egrave: 'È'
+  Eacute: 'É'
+  Igrave: 'Ì'
+  Ograve: 'Ò'
+  Ugrave: 'Ù'
+  # Latin letters with diacritics (other languages)
   Aacute: 'Á'
   Acircumflex: 'Â'
   Atilde: 'Ã'
@@ -169,18 +181,14 @@ keysym_mappings:
   Aring: 'Å'
   AE: 'Æ'
   Ccedilla: 'Ç'
-  Egrave: 'È'
-  Eacute: 'É'
   Ecircumflex: 'Ê'
   Ediaeresis: 'Ë'
-  Igrave: 'Ì'
   Iacute: 'Í'
   Icircumflex: 'Î'
   Idiaeresis: 'Ï'
   ETH: 'Ð'
   Eth: 'Ð'
   Ntilde: 'Ñ'
-  Ograve: 'Ò'
   Oacute: 'Ó'
   Ocircumflex: 'Ô'
   Otilde: 'Õ'
@@ -188,7 +196,6 @@ keysym_mappings:
   multiply: '×'
   Oslash: 'Ø'
   Ooblique: 'Ø'
-  Ugrave: 'Ù'
   Uacute: 'Ú'
   Ucircumflex: 'Û'
   Udiaeresis: 'Ü'
@@ -196,7 +203,6 @@ keysym_mappings:
   THORN: 'Þ'
   Thorn: 'Þ'
   ssharp: 'ß'
-  agrave: 'à'
   aacute: 'á'
   acircumflex: 'â'
   atilde: 'ã'
@@ -204,17 +210,13 @@ keysym_mappings:
   aring: 'å'
   ae: 'æ'
   ccedilla: 'ç'
-  egrave: 'è'
-  eacute: 'é'
   ecircumflex: 'ê'
   ediaeresis: 'ë'
-  igrave: 'ì'
   iacute: 'í'
   icircumflex: 'î'
   idiaeresis: 'ï'
   eth: 'ð'
   ntilde: 'ñ'
-  ograve: 'ò'
   oacute: 'ó'
   ocircumflex: 'ô'
   otilde: 'õ'
@@ -222,7 +224,6 @@ keysym_mappings:
   division: '÷'
   oslash: 'ø'
   ooblique: 'ø'
-  ugrave: 'ù'
   uacute: 'ú'
   ucircumflex: 'û'
   udiaeresis: 'ü'
