--- a/dictate.yaml
+++ b/dictate.yaml
@@ -1,19 +1,3 @@
-general:
-  recognizer_engine: google
-  typewrite_interval: 0.03
-
-Recognizer:
-  pause_threshold: 1
-recognize_google:
-  language: auto  # Use 'auto' to detect language from keyboard layout
-gTTS:
-  lang: auto  # Use 'auto' to detect language from keyboard layout
-calibrate:
-  duration: 30
-  asr_calibration_text: |
-    The quick brown fox jumps over the lazy dog.
-    The dog thinks hard, hanging his head and humming a song.
-    The fox judges each choice with vision, chewing cool food on the lawn.
 keybindings:
   - name: "Toggle speech echo on/off"
     command: echo
@@ -30,3 +14,34 @@ keybindings:
   - name: "Record until silence detected"
     command: record till pause
     keys: "<Shift><Control>s"
+general:
+  recognizer_engine: google
+  typewrite_interval: 0.03
+# Status window colors for light and dark styles
+colors:
+  light:
+    fg: black
+    listening: lightcoral
+    processing: lightsalmon
+    error: lightcoral
+    echo: lightblue
+    default: lightgray
+  dark:
+    fg: white
+    listening: indianred
+    processing: peru
+    error: indianred
+    echo: steelblue
+    default: dimgray
+Recognizer:
+  pause_threshold: 1
+recognize_google:
+  language: auto  # Use 'auto' to detect language from keyboard layout
+gTTS:
+  lang: auto  # Use 'auto' to detect language from keyboard layout
+calibrate:
+  duration: 30
+  asr_calibration_text: |
+    The quick brown fox jumps over the lazy dog.
+    The dog thinks hard, hanging his head and humming a song.
+    The fox judges each choice with vision, chewing cool food on the lawn.
